Setup pom and properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=checkout-component
+spring.security.enabled=false
+server.port=8080
+management.endpoints.web.exposure.include=health,info
